--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,6 @@
 <h1> User Show/Profile Page </h1>
 
-<h1><%= @user.username%></h1>
+<h1><%= @user.username.capitalize %></h1>
 
 <p>
     Show User's Music Reviews Here
