--- a/app/views/application/home.html.erb
+++ b/app/views/application/home.html.erb
@@ -1,5 +1,9 @@
 <h1> Welcome To The Melomaniacs App </h1>
 
 <p>
+    <%= link_to "Login", login_path%>
 
-<%= link_to "Sign Up", signup_path %></p>
+    <%= link_to "Sign Up", signup_path %>
+
+    <%=link_to "Logout", logout_path%>
+</p>
