--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
   </head>
 
 
-  <div>   Links here
+  <div>   
     <%=link_to "Logout", logout_path, method: :delete%>
   </div>
   <body>
@@ -21,4 +21,5 @@
     <footer class="branding">
         <small>&copy; 2020 <strong>The Melomaniacs</strong></small>
     </footer>
+    
 </html>
