--- a/app/views/application/home.html.erb
+++ b/app/views/application/home.html.erb
@@ -1,7 +1,9 @@
 <h1> Welcome To The Melomaniacs App </h1>
 
-<p>
-    <%= link_to "Login", login_path%>
+<div class="main">
+    <ul>
+    <li><%= link_to "Login", login_path%></li>
 
-    <%= link_to "Sign Up", signup_path %>
-</p>
+    <li><%= link_to "Sign Up", signup_path%></li>
+    </ul>
+</div>
