--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -17,5 +17,9 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
+body {
+    background: url('pexels-expect-best.jpg') ;
+    background-size: cover;} 
+
 
  
