--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -5,5 +5,5 @@
     <%= review.title%>
     <%= review.content%>
     <%# <%= link_to review.user.username, user_path%> %>
-
+    <%= link_to  "DELETE REVIEW", method: :delete, data: {confirm: "Are You Sure?"%>
 <% end %>
