--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,6 +4,8 @@
 
 <p>
 <%= link_to "New Review", new_review_path %>
-    Show User's Music Reviews Here
-    Maybe add an Artist/Song of the Week for the User Or a Currently Playing thing
+
+Show User's Music Reviews Here
+Stretch: Maybe add an Artist/Song of the Week for the User Or a Currently Playing thing
+
 </p>
