fixed views for review index and show w/links

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,8 @@
 
  <span class="navbar-toggler-icon">  
     <%= link_to "HOME", '/'%><br>
-    <%= link_to "LOGOUT", logout_path, method: :delete%>
+    <%= link_to "REVIEWS", reviews_path %><br>
+    <%= link_to "LOGOUT", logout_path, method: :delete%><br><br>
   </span>
   <body>
 
