--- a/app/views/reviews/show.html.erb
+++ b/app/views/reviews/show.html.erb
@@ -3,4 +3,4 @@
 <h3><%= @review.title %></h3>
 <p><%= @review.content %><p>
 
-<%# <%= link_to "Edit Review", edit_review(@review) %> %>
+<%# <%= link_to "Edit Review", edit_review(@review) %>
