--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -2,10 +2,10 @@
 
 <%= @reviews.each do |review| %>
 
-    <%= review.title %>
-    <%= review.content %>
-    
-    <%# <%= link_to review.user.username, user_path%> %>
-    <%= button_to "DELETE REVIEW", review_path(@review.id), method: :delete %>
-    
+    <h3><%= review.title.capitalize %></h3>
+    <p>
+        <%= review.content.capitalize %><br>
+        <%= review.user.username.capitalize %>
+    </p><br>
+
 <% end %>
