--- a/app/views/reactions/new.html.erb
+++ b/app/views/reactions/new.html.erb
@@ -1,12 +1,9 @@
-<h1>New Reaction</h1>
+<h1>NEW REACTION for <%= @reaction.review.user.username.capitalize%>'s <%= @reaction.review.title %> Review </h1>
 
-<%= form_for(@reaction) do |f| %>
-
-    <%= f.label :comment, "COMMENT:" %>
-    <%= f.text_area :comment %>
-
-    <%= f.hidden_field :review_id %>
-
-    <%= f.submit "React"%>
-
+<%= form_for(@reaction) do |f|%>
+<div>
+<%= f.label :comment %>
+<%= f.text_area :comment %>
+</div>
+<%= f.submit %>
 <% end %>
