--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -1,6 +1,6 @@
 <h1>ALL REVIEWS </h1>
 
-<%= @reviews.each do |review| %>
+<% @reviews.each do |review| %>
 
     <h3><%= review.title.capitalize %></h3>
     <p>
