--- a/app/views/reactions/show.html.erb
+++ b/app/views/reactions/show.html.erb
@@ -1,3 +1,5 @@
 <h1> Reactions </h1>
 
-<%= @reaction.comment%>
+<p>
+    <%= @reaction.user.username.capitalize %> said: "<%= @reaction.comment.capitalize%>"
+</p>
