--- a/app/views/reactions/new.html.erb
+++ b/app/views/reactions/new.html.erb
@@ -1,16 +1,14 @@
-<h1>New Reaction to </h1>
+<h1>New Reaction to <%= @reaction.review.user.username.capitalize%>'s 
+<%= @reaction.review.title %> Review </h1><br>
 
-<%= flash[:error] %>
-<br>
 <%= form_for(@reaction) do |f|%>
 
 <div>
     <%= f.label :comment %>
     <%= f.text_area :comment %>
 </div>
-<div>
     <%= f.hidden_field :review_id %>
-</div><br>
+    
     <%= f.submit "REACT" %>
 
 <% end %>
