--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,7 @@
 <h1> Join the Crew </h1>  # Sign up
 
+<%= render partial: 'layouts/errors', locals: {i: @user} %>
+
 <%= form_for(@user) do |f|%>
     <%= f.label :username %>
     <%= f.text_field :username %>
