--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -13,3 +13,7 @@
     <%= f.submit "Share Your Opinion"%>
 
 <% end %>
+
+<%= form_tag %>
+#search field
+#need a place for song/album image and song preview
