more api changes

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,12 +14,13 @@
  <span class="navbar-toggler-icon">  
     <%= link_to "HOME", '/'%><br>
     <%= link_to "REVIEWS", reviews_path %><br>
+    <%= link_to "MUSIC", tracks_path %><br>
     <%= link_to "LOGOUT", logout_path, method: :delete%><br><br>
   </span>
   <body>
 
     <%= yield %>
-    
+
   </body><br>
 
     <footer class="branding">
