--- a/app/views/tracks/index.html.erb
+++ b/app/views/tracks/index.html.erb
@@ -1,5 +1,4 @@
-<h1> Find Something To Review </h1>
-
+<h1>Search for Spotify Songs</h1>
 <%= form_tag("/track_search", method: "get") do %>
 <br>
     <%= label_tag(:q, "Search For:")%>
@@ -7,4 +6,3 @@
     <%= submit_tag("Search")%>
 <br>
 <% end %>
-
