--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -4,22 +4,22 @@
 
 <%= form_for(@review) do |f| %>
 <ul>
-    <li><%= f.label :title, "TITLE:" %></li>
+    <%= f.label :title, "REVIEW TITLE:" %>
     <li><%= f.text_field :title %></li>
 
-    <li><%= f.label :content, "CONTENT:" %></li>
+    <li><%= f.label :song_name, "SONG NAME:" %>
+    <li><%= f.text_field :song_name %></li>
+
+    <%= f.label :album_name, "ALBUM NAME:" %>
+    <li><%= f.text_field :album_name %></li>
+
+    <%= f.label :artist_name, "ARTIST NAME:" %>
+    <li><%= f.text_field :artist_name %></li>
+
+    <%= f.label :content, "CONTENT:" %>
     <li><%= f.text_area :content %></li>
 
     <%= f.submit "Share Your Opinion"%></li>
 </ul>
 <% end %>
 
-<%= form_tag("/search", method: "get") do %>
-<br>
-    <%= label_tag(:q, "Search For:")%>
-    <%= text_field_tag(:q) %>
-    <%= submit_tag("Search")%>
-<br>
-<% end %>
-
-#need a place for song/album image and song preview
