--- a/app/views/application/home.html.erb
+++ b/app/views/application/home.html.erb
@@ -1,9 +1,10 @@
-<h1> Welcome To The Melomaniacs App </h1>
+<div class="title">
+    <h1> Welcome To The Melomaniacs App </h1>
+</div>
 
-<div class="main">
-    <ul>
+
+<ul>
     <li><%= link_to "Login", login_path%></li>
 
     <li><%= link_to "Sign Up", signup_path%></li>
-    </ul>
-</div>
+</ul>
