--- a/app/views/reviews/edit.html.erb
+++ b/app/views/reviews/edit.html.erb
@@ -2,11 +2,18 @@
 
 <%= form_for(@review) do |f| %>
 
-    <%= f.label "Title" %>
-    <%= f.text_field :title %>
+    <%= f.label :title, "REVIEW TITLE:" %>
+    <li><%= f.text_field :title %></li>
 
-    <%= f.label "Content" %>
-    <%= f.text_area :content %>
+    <li><%= f.label :song_or_album_name, "SONG/ALBUM NAME:" %>
+    <li><%= f.text_field :song_or_album_name %></li>
+
+
+    <%= f.label :artist_name, "ARTIST NAME:" %>
+    <li><%= f.text_field :artist_name %></li>
+
+    <%= f.label :content, "CONTENT:" %>
+    <li><%= f.text_area :content %></li>
 
     <%= f.submit "Edit Review" %>
 <% end %>
