--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -7,11 +7,9 @@
     <%= f.label :title, "REVIEW TITLE:" %>
     <li><%= f.text_field :title %></li>
 
-    <li><%= f.label :song_name, "SONG NAME:" %>
-    <li><%= f.text_field :song_name %></li>
+    <li><%= f.label :song_or_album_name, "SONG/ALBUM NAME:" %>
+    <li><%= f.text_field :song_or_album_name %></li>
 
-    <%= f.label :album_name, "ALBUM NAME:" %>
-    <li><%= f.text_field :album_name %></li>
 
     <%= f.label :artist_name, "ARTIST NAME:" %>
     <li><%= f.text_field :artist_name %></li>
