changed navbar styling

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -24,7 +24,7 @@
 }
 
 body {
-    // background: url('pexels-expect-best.jpg') ;
+    background: url('pexels-expect-best.jpg') ;
     background-size: cover;
 } 
 
@@ -34,6 +34,8 @@ div {
     border: 5px solid black;
     margin: auto;
     text-align: center;
+    background-color: rgba(184, 180, 180, 0.897);
+    
 }
 
 h1 {
@@ -45,68 +47,7 @@ h1 {
     text-shadow: 2px 2px #ff0000;
 }
 
-// .boxed {
-//     width: 400px;
-//     border: 5px solid black ;
-// }
 
-ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    height: 100%;
-    position: auto;
-    margin-top: 25px;
-    margin-left: 25px;
-}
-  
-ul li {
-    text-align: center;
-    display: inline-flex ;
-    margin: auto;
-    width: 143%;
-}
-  
-ul li a {
-    text-decoration: none;
-    color: rgb(10, 10, 10);
-    padding: 5px 20px;
-    border: 5px solid black;
-    transition: 0.06s ease;
-    position: relative;
-    
-    
-}
-
-ul li a:hover{
-    background-color: rgb(168, 155, 170);
-    color: #000
-}
-  
-ul li.active a{
-    background-color: #fff;
-    color: #000
-}
-  
-  /* unvisited link */
-a:link {
-    color: grey;
-}
-  
-/* visited link */
-a:visited {
-    color: red;
-}
-  
-  /* mouse over link */
-  a:hover {
-    color: hotpink;
-  }
-  
-  /* selected link */
-  a:active {
-    color: blue;
-  }
 
 .title h1{
     color: rgb(236, 208, 208);
@@ -123,3 +64,25 @@ a:visited {
 .page-title h1{
     color: rgb(236, 208, 208);
 }
+
+
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    width: 200px;
+    background-color: #f1f1f1;
+  }
+  
+  li a {
+    display: block;
+    color: #000;
+    padding: 8px 16px;
+    text-decoration: none;
+  }
+  
+  /* Change the link color on hover */
+  li a:hover {
+    background-color: #555;
+    color: white;
+  }
