--- a/app/views/application/home.html.erb
+++ b/app/views/application/home.html.erb
@@ -1,10 +1,12 @@
 <div class="title">
-    <h1> Welcome To The Melomaniacs App </h1>
+    <h1> We Are...The Melomaniacs </h1>
 </div>
+<br>
 
 
 <ul>
     <li><%= link_to "Login", login_path%></li>
-
+</ul>
+<ul>
     <li><%= link_to "Sign Up", signup_path%></li>
 </ul>
