corrected footer styling

--- a/app/views/application/home.html.erb
+++ b/app/views/application/home.html.erb
@@ -1,12 +1,16 @@
 <div class="title">
-    <h1> We Are...The Melomaniacs </h1>
+    <div class="container">
+        <div class="child">
+            <h1> We Are...The Melomaniacs </h1>
+        </div>
+    </div>
 </div>
 <br>
 
 
-<ul>
+<ol>
     <li><%= link_to "Login", login_path%></li>
-</ul>
-<ul>
+</ol>
+<ol>
     <li><%= link_to "Sign Up", signup_path%></li>
-</ul>
+</ol>
