--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -28,15 +28,14 @@ body {
     background-size: cover;
 } 
 
-div {
-    width: 320px;
-    padding: 10px;
-    border: 5px solid black;
-    margin: auto;
-    text-align: center;
-    background-color: rgba(184, 180, 180, 0.897);
-    
-}
+// div {
+//     width: 320px;
+//     padding: 10px;
+//     border: 5px solid black;
+//     margin: auto;
+//     text-align: center;
+//     background-color: #555;
+// }
 
 h1 {
     width: 50%;
@@ -44,13 +43,11 @@ h1 {
     left: 100px;
     top: 150px;
     color: black;
-    text-shadow: 2px 2px #ff0000;
+    // text-shadow: 2px 2px #ff0000;
 }
 
-
-
 .title h1{
-    color: rgb(236, 208, 208);
+    color: black;
 }
 
 .container, .container-fluid, .container-sm, .container-md, .container-lg, .container-xl {
@@ -59,30 +56,79 @@ h1 {
     padding-left: 10px;
     margin-right: auto;
     margin-left: auto;
+    display: relative;
+
+}
+
+.child {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 320px;
+    padding: 10px;
+    border: 5px solid black;
+    margin: auto;
+    text-align: center;
+    background-color: #555;
 }
 
 .page-title h1{
     color: rgb(236, 208, 208);
 }
 
-
 ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
-    width: 200px;
-    background-color: #f1f1f1;
+    overflow: hidden;
+    background-color: #333;
   }
   
-  li a {
+ul li {
+    float: left;
+  }
+  
+ul li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+  
+  /* Change the link color to #111 (black) on hover */
+ul li a:hover {
+    background-color: #111;
+}
+
+
+ol {
+    list-style-type: none;
+    margin: 200;
+    padding: 0;
+    width: 150px;
+    text-align: center;
+    background-color: #f1f1f1;
+    
+}
+  
+ol li a {
     display: block;
     color: #000;
     padding: 8px 16px;
     text-decoration: none;
-  }
+}
   
   /* Change the link color on hover */
-  li a:hover {
+ol li a:hover {
     background-color: #555;
     color: white;
-  }
+}
+footer.branding {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 2.5rem;
+    color: white;
+}
