--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -3,21 +3,21 @@
 <%= render partial: 'layouts/errors', locals: {i: @review} %>
 
 <%= form_for(@review) do |f| %>
-<ul>
-    <%= f.label :title, "REVIEW TITLE:" %>
-    <li><%= f.text_field :title %></li>
+<div class="form">
+    <%= f.label :title, "REVIEW TITLE:" %><br>
+    <%= f.text_field :title %><br>
 
-    <li><%= f.label :song_or_album_name, "SONG/ALBUM NAME:" %>
-    <li><%= f.text_field :song_or_album_name %></li>
+    <%= f.label :song_or_album_name, "SONG/ALBUM NAME:" %><br>
+    <%= f.text_field :song_or_album_name %><br>
+<br>
 
-
-    <%= f.label :artist_name, "ARTIST NAME:" %>
-    <li><%= f.text_field :artist_name %></li>
-
-    <%= f.label :content, "CONTENT:" %>
-    <li><%= f.text_area :content %></li>
-
-    <%= f.submit "Share Your Opinion"%></li>
-</ul>
+    <%= f.label :artist_name, "ARTIST NAME:" %><br>
+    <%= f.text_field :artist_name %><br>
+<br>
+    <%= f.label :content, "CONTENT:" %><br>
+    <%= f.text_area :content %><br>
+<br>
+    <%= f.submit "Share Your Opinion"%><br>
+</div>
 <% end %>
 
