--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,10 +12,15 @@
 
 
  <ul class="navbar-toggler-icon">  
+    
+  <% if logged_in? %>
     <li><%= link_to "HOME", '/'%></li>
     <li><%= link_to "REVIEWS", reviews_path %></li>
     <li><%= link_to "MUSIC", tracks_path %></li>
     <li><%= link_to "LOGOUT", logout_path, method: :delete%></li>
+  <% else %>
+      <li><%= link_to "HOME", '/'%></li>
+  <% end %>
   </ul>
   <body>
 
