--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,7 @@
     
   <% if logged_in? %>
     <li><%= link_to "HOME", '/'%></li>
+    <li><%= link_to "NEW REVIEW", new_review_path %></li>
     <li><%= link_to "REVIEWS", reviews_path %></li>
     <li><%= link_to "MUSIC", tracks_path %></li>
     <li><%= link_to "LOGOUT", logout_path, method: :delete%></li>
