--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,6 @@
-<h1> Join the Crew </h1>  # Sign up
+<h1> Join the Crew </h1>
+
+<br>
 
 <%= render partial: 'layouts/errors', locals: {i: @user} %>
 
