--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -20,7 +20,8 @@
 *{
     margin: auto;
     padding: auto;
-    font-family: Verdana , monospace;
+    // font-family: Verdana , monospace;
+    font-family: Marker Felt, fantasy
 
 }
 
@@ -31,6 +32,7 @@ body {
 } 
 
 h1 {
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     width: 50%;
     position: center;
     left: 100px;
@@ -61,7 +63,7 @@ h1 {
     border: 5px solid black;
     margin: auto;
     text-align: center;
-    background-color: rgba(245, 184, 92, 0.308);
+    background-color: rgba(245, 184, 92, 0.4);
 
     // text-shadow: 1px 1px 0 white;
 }
@@ -127,6 +129,7 @@ footer.branding {
 }
 
 .form {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -136,5 +139,5 @@ footer.branding {
     border: 5px solid black;
     margin: auto;
     text-align: center;
-    background-color: rgba(245, 184, 92, 0.308);;
+    background-color: rgba(245, 184, 92, 0.5);;
 }
