--- a/app/views/reviews/show.html.erb
+++ b/app/views/reviews/show.html.erb
@@ -4,7 +4,9 @@
 
 <div class="container">
     <div class="child">
-        <h3><%= @review.title.capitalize %>  for "<%= @review.song_or_album_name%>"</h3><br>
+        <h3>"<%= @review.title.capitalize %>" for </h3><br>
+        
+        <h3> <%= @review.song_or_album_name%></h3><br>
         <h3> by </h3><br>
         <h3> <%= @review.artist_name %>: </h3><br>
                 <p><%= @review.content %><p>
@@ -15,4 +17,9 @@
 
 <ol>
     <li><%= link_to "Edit Review", edit_review_url(@review.id)%></li>
+</ol>
+<ol>
+    <li><%= form_tag review_path(@review.id), method: "delete" do %></li>
+    <li><%= submit_tag "Delete" %></li>
+<% end %>
 </ol>
