--- a/app/views/reactions/show.html.erb
+++ b/app/views/reactions/show.html.erb
@@ -1,5 +1,6 @@
-<h1> Reactions </h1>
+<h1> Reactions to  "<%= @reaction.review.title %>" Review</h1>
 
 <p>
+   
     <%= @reaction.user.username.capitalize %> said: "<%= @reaction.comment.capitalize%>"
 </p>
