--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,10 +1,14 @@
 <h1> Hello, <%= @user.username.capitalize %></h1><br>
 
+<div class="container">
+    <div class="child">
+<p> Welcome Back! </p><br>
 
-<%= link_to "New Review", new_review_path %>
-<br>
+    <p>
+        Did you just get done listening to Drake's new song? Or are you just done arguing over Kanye?</p><br>
+        <p> Either way, any artist,</p>
+        <p>any genre, no one is off limits here. Let us know how you're feeling about the latest music or even the oldies. </p>
+    </div>
+</div>
 
-<p>
-Show User's Music Reviews Here
-Stretch: Maybe add an Artist/Song of the Week for the User Or a Currently Playing thing
-</p>
+
