--- a/app/views/reactions/new.html.erb
+++ b/app/views/reactions/new.html.erb
@@ -1,5 +1,5 @@
 <h1>New Reaction to <%= @reaction.review.user.username.capitalize%>'s 
-<%= @reaction.review.title %> Review </h1><br>
+<%= @reaction.review.artist_name %> Review </h1><br>
 
 <%= render partial: 'layouts/errors', locals: {i: @reaction} %>
 
