created new form for users

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -138,7 +138,8 @@ footer.branding {
     padding: 10px;
     border: 5px solid black;
     margin: auto;
-    text-align: center;
+    text-align: right;
+    display: block;
     background-color: rgba(245, 184, 92, 0.5);;
 }
 
