--- a/app/views/fbs/show.html.erb
+++ b/app/views/fbs/show.html.erb
@@ -9,7 +9,7 @@
     <p>
         Did you just get done listening to Drake's new song? Or are you just done arguing over Kanye?</p><br>
         <p> Either way, any artist,</p>
-        <p>any genre, no one is off limits here. Let us know how you're feeling about the latest music or even the oldies. </p>
+        <p>any genre, any song no one is off limits here. Let us know how you're feeling about the latest music or even the oldies. </p>
     </div>
 </div>
 
