--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,14 +1,5 @@
 <h1> Hello, <%= @user.username.capitalize %></h1><br>
 
-<div class="container">
-    <div class="child">
-<p> Welcome Back! </p><br>
 
-    <p>
-        Did you just get done listening to Drake's new song? Or are you just done arguing over Kanye?</p><br>
-        <p> Either way, any artist,</p>
-        <p>any genre, any song no one is off limits here. Let us know how you're feeling about the latest music or even the oldies. </p>
-    </div>
-</div>
-
+<%= render "show" %>
 
