--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,11 +14,11 @@
  <ul class="navbar-toggler-icon">  
     
   <% if logged_in? %>
-    <li><%= link_to "HOME", '/'%></li>
+    <li><%= link_to "HOME", user_path(current_user.id) %></li>
     <li><%= link_to "NEW REVIEW", new_review_path %></li>
     <li><%= link_to "REVIEWS", reviews_path %></li>
-    <%# <li><%= link_to "MUSIC", tracks_path %></li> 
-    <li><%= link_to "LOGOUT", logout_path, method: :delete%></li>
+    <li><%= link_to "REACTIONS", reactions_path %></li>
+    <li><%= link_to "LOGOUT", logout_path, method: :delete %></li>
   <% else %>
       <li><%= link_to "HOME", '/'%></li>
   <% end %>
