changed some page styling and verbiage

--- a/app/views/reactions/show.html.erb
+++ b/app/views/reactions/show.html.erb
@@ -1,4 +1,4 @@
-<h1> Reactions to  "<%= @reaction.review.title %>" Review</h1>
+<h1> Reactions to <%= @reaction.review.user.username %>'s  "<%= @reaction.review.artist_name %>" Review</h1>
 
 <p>
    
