--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -2,7 +2,7 @@
 
 <div class="form">
 
-<% @reviews.each do |review| %>
+<% @reviews.order_by_time.each do |review| %>
 
     <h3><%= link_to review.title.capitalize, review_path(review.id) %></h3>
     <br>
