--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -3,13 +3,19 @@
 <%= render partial: 'layouts/errors', locals: {i: @user} %>
 
 <div class="form">
-    <%= form_tag users_path do %>
-        
-        <br><label> USERNAME: </label>
-        <%= text_field_tag :username %><br>
+   <%= form_for(@user) do |f|%>
 
-        <%= render "new" %><br>
+        <%= f.label :username %>
+        <%= f.text_field :username %><br><br>
 
-        <%= submit_tag "Join Now" %>
+        <%= f.label :email %>
+        <%= f.email_field :email %><br><br>
+
+        <%= f.label :password %>
+        <%= f.password_field :password %><br><br>	
+
+        <%= f.submit "Join Now" %>
     <%end%>
 </div>
+
+    
