--- a/app/views/reactions/new.html.erb
+++ b/app/views/reactions/new.html.erb
@@ -3,14 +3,14 @@
 
 <%= render partial: 'layouts/errors', locals: {i: @reaction} %>
 
+<div class="form">
 <%= form_for(@reaction) do |f|%>
-
-<div>
     <%= f.label :comment %>
-    <%= f.text_area :comment %>
-</div>
+    <%= f.text_area :comment %><br>
+
     <%= f.hidden_field :review_id %>
 
     <%= f.submit "REACT" %>
 
 <% end %>
+</div>
