--- a/app/views/reactions/show.html.erb
+++ b/app/views/reactions/show.html.erb
@@ -1,6 +1,7 @@
-<h1> Reactions to <%= @reaction.review.user.username %>'s  "<%= @reaction.review.artist_name %>" Review</h1>
+<h1> Reactions to <%= @reaction.review.user.username %>'s  "<%= @reaction.review.artist_name %>" Review</h1><br>
 
 <p>
-   
+# show your reaction and other users' here
+
     <%= @reaction.user.username.capitalize %> said: "<%= @reaction.comment.capitalize%>"
 </p>
