--- a/app/views/reviews/edit.html.erb
+++ b/app/views/reviews/edit.html.erb
@@ -1,19 +1,21 @@
 <h1>EDIT REVIEW</h1>
 
+<div class="form">
 <%= form_for(@review) do |f| %>
 
     <%= f.label :title, "REVIEW TITLE:" %>
-    <li><%= f.text_field :title %></li>
+    <%= f.text_field :title %><br><br>
 
-    <li><%= f.label :song_or_album_name, "SONG/ALBUM NAME:" %>
-    <li><%= f.text_field :song_or_album_name %></li>
+    <%= f.label :song_or_album_name, "SONG/ALBUM NAME:" %>
+    <%= f.text_field :song_or_album_name %><br><br>
 
 
     <%= f.label :artist_name, "ARTIST NAME:" %>
-    <li><%= f.text_field :artist_name %></li>
+    <%= f.text_field :artist_name %><br><br>
 
     <%= f.label :content, "CONTENT:" %>
-    <li><%= f.text_area :content %></li>
+    <%= f.text_area :content %><br><br>
 
-    <%= f.submit "Edit Review" %>
+    <%= f.submit "Edit Review" %><br><br>
 <% end %>
+</div>
