--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -64,8 +64,19 @@ h1 {
     margin: auto;
     text-align: center;
     background-color: rgba(245, 184, 92, 0.4);
+}
 
-    // text-shadow: 1px 1px 0 white;
+.reaction {
+    position: absolute;
+    top: 20%;
+    left: 80%;
+    transform: translate(-50%, -50%);
+    width: 320px;
+    padding: 10px;
+    border: 5px solid black;
+    margin: auto;
+    text-align: center;
+    background-color: rgba(245, 184, 92, 0.4);
 }
 
 .page-title h1{
