--- a/app/views/reviews/show.html.erb
+++ b/app/views/reviews/show.html.erb
@@ -9,11 +9,10 @@
         <h3> <%= @review.song_or_album_name%></h3><br>
         <h3> by </h3><br>
         <h3> <%= @review.artist_name %>: </h3><br>
-                <p><%= @review.content %><p>
-<br>
-<% if @review.user != current_user%>
-    <%= link_to "React to this Review", new_review_reaction_path(@review.id)%>
-<% end %>
+                <p><%= @review.content %><p><br>
+            <% if @review.user != current_user%>
+                <%= link_to "React to this Review", new_review_reaction_path(@review.id)%>
+            <% end %>
     </div>
 </div>
 
