--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -12,4 +12,8 @@
     </p>
 <br>----------------------------------------<br>
 <% end %>
+
+<%= link_to "Show Song/Album Reviews", '/songs'%>
+
 </div>
+
